<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/llHeader"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingBottom="1dp"
        android:visibility="visible"
        android:weightSum="5">

        <TextView
            android:id="@+id/lecture_txt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.79"
            android:paddingTop="@dimen/_6sdp"
            android:paddingBottom="@dimen/_5sdp"
            android:text="@string/lecture"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp" />

        <TextView
            android:id="@+id/timing_txt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.10"
            android:paddingTop="@dimen/_6sdp"
            android:paddingBottom="@dimen/_5sdp"
            android:text="@string/timing"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp" />

        <TextView
            android:id="@+id/standard_txt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.20"
            android:paddingTop="@dimen/_6sdp"
            android:paddingBottom="@dimen/_5sdp"
            android:text="@string/standard"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp" />

        <TextView
            android:id="@+id/class_txt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.84"
            android:paddingTop="@dimen/_6sdp"
            android:paddingBottom="@dimen/_5sdp"
            android:text="@string/classes"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp" />

        <TextView
            android:id="@+id/subject_txt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.1"
            android:paddingTop="@dimen/_6sdp"
            android:paddingBottom="@dimen/_5sdp"
            android:text="@string/subject"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp" />

    </LinearLayout>
</LinearLayout>