<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/llHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/list_line"
        android:orientation="horizontal"
        android:padding="@dimen/_5sdp"
        android:paddingBottom="@dimen/_1sdp"
        android:visibility="visible"
        android:weightSum="5">

        <TextView
            android:id="@+id/lecture_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:padding="@dimen/_3sdp"
            android:text="@string/lecture"
            android:textAlignment="center"
            android:textColor="@color/scheduleheadertextcolor"
            android:textSize="@dimen/_11sdp" />

        <TextView
            android:id="@+id/timing_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.24"
            android:paddingLeft="@dimen/_8sdp"
            android:paddingTop="@dimen/_3sdp"
            android:paddingRight="@dimen/_3sdp"
            android:paddingBottom="@dimen/_3sdp"
            android:text="@string/timing"
            android:textAlignment="textStart"
            android:textColor="@color/scheduleheadertextcolor"
            android:textSize="@dimen/_11sdp" />

        <TextView
            android:id="@+id/standard_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/_3sdp"
            android:paddingLeft="@dimen/_15sdp"
            android:text="@string/standard"
            android:textAlignment="textStart"
            android:textColor="@color/scheduleheadertextcolor"
            android:textSize="@dimen/_11sdp" />

        <TextView
            android:id="@+id/class_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.84"
            android:padding="@dimen/_3sdp"
            android:paddingLeft="@dimen/_5sdp"
            android:text="@string/classes"
            android:textAlignment="textStart"
            android:textColor="@color/scheduleheadertextcolor"
            android:textSize="@dimen/_11sdp" />

        <TextView
            android:id="@+id/subject_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/_3sdp"
            android:layout_weight="1"
            android:padding="@dimen/_3sdp"
            android:paddingLeft="@dimen/_15sdp"
            android:text="@string/subject"
            android:textAlignment="textStart"
            android:textColor="@color/scheduleheadertextcolor"
            android:textSize="@dimen/_11sdp" />

    </LinearLayout>
</LinearLayout>