<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/llHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/list_line"
        android:orientation="horizontal"
        android:padding="@dimen/_5sdp"
        android:visibility="visible"
        android:weightSum="5">

        <TextView
            android:id="@+id/plandate_txt"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_25sdp"
            android:padding="@dimen/_3sdp"
            android:text="@string/plandate"
            android:textAlignment="center"
            android:textColor="@color/scheduleheadertextcolor"
            android:textSize="@dimen/_11sdp" />

        <TextView
            android:id="@+id/standard_txt"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_25sdp"
            android:layout_weight="1"
            android:padding="@dimen/_3sdp"
            android:text="@string/standard"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textColor="@color/scheduleheadertextcolor"
            android:textSize="@dimen/_11sdp" />

        <TextView
            android:id="@+id/class_txt"
            android:layout_width="0dp"
            android:layout_height="@dimen/_25sdp"
            android:layout_weight="1.4"
            android:padding="@dimen/_3sdp"
            android:text="@string/classes"
            android:textAlignment="center"
            android:textColor="@color/scheduleheadertextcolor"
            android:textSize="@dimen/_11sdp" />

        <TextView
            android:id="@+id/subject_txt"
            android:layout_width="0dp"
            android:layout_height="@dimen/_25sdp"
            android:layout_weight="2.1"
            android:padding="@dimen/_3sdp"
            android:text="@string/subject"
            android:textAlignment="center"
            android:textColor="@color/scheduleheadertextcolor"
            android:textSize="@dimen/_11sdp" />

    </LinearLayout>
</LinearLayout>