<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="@dimen/_35sdp"
    android:layout_margin="@dimen/_10sdp"
    android:background="@drawable/shadow_box1"
    android:orientation="horizontal"
    android:padding="@dimen/_5sdp"
    android:weightSum="4">

    <LinearLayout
        android:id="@+id/llHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_1sdp"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/_1sdp"
        android:visibility="visible"
        android:weightSum="4">

        <TextView
            android:id="@+id/Student_name_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.4"
            android:padding="@dimen/_5sdp"
            android:text="@string/student_name"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp" />

        <TextView
            android:id="@+id/gr_no_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/_4sdp"
            android:layout_weight="1"
            android:padding="@dimen/_5sdp"
            android:text="@string/grno"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp" />

        <TextView
            android:id="@+id/percentage_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.78"
            android:padding="@dimen/_5sdp"
            android:text="@string/percentage"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp" />

        <TextView
            android:id="@+id/view_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.87"
            android:padding="@dimen/_5sdp"
            android:text="@string/view"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp" />


    </LinearLayout>
</LinearLayout>

