<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shadow_box1"
            android:padding="@dimen/_5sdp"
            android:weightSum="5">

            <TextView
                android:id="@+id/Standard_txt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_1sdp"
                android:layout_weight="1"
                android:text="@string/workplanstandard"
                android:paddingTop="@dimen/_5sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/_11sdp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/Class_txt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/homeworkClass"
                android:paddingTop="@dimen/_5sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/_11sdp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/Subject_txt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.3"
                android:text="@string/homeworkSubject"
                android:paddingTop="@dimen/_5sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/_11sdp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/month_txt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/workplanmonth"
                android:paddingTop="@dimen/_5sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_11sdp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/view_txt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/view"
                android:paddingTop="@dimen/_5sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_11sdp"
                android:textStyle="normal"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>