<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/llHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/_1sdp"
        android:visibility="visible"
        android:weightSum="4"
        android:padding="@dimen/_5sdp"
        android:layout_marginLeft="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_5sdp"
        android:background="@drawable/list_line">

        <TextView
            android:id="@+id/chapter_no_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/chapterno"
            android:layout_marginLeft="@dimen/_5sdp"
            android:padding="@dimen/_2sdp"
            android:textColor="@color/scheduleheadertextcolor"
            android:textSize="@dimen/_11sdp"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/chapter_name_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.50"
            android:text="@string/lessonchaptername"
            android:layout_marginLeft="@dimen/_5sdp"
            android:padding="@dimen/_3sdp"
            android:textColor="@color/scheduleheadertextcolor"
            android:textSize="@dimen/_11sdp"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/pdf_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".7"
            android:text="@string/lessonpdf"
            android:padding="@dimen/_3sdp"
            android:textColor="@color/scheduleheadertextcolor"
            android:textSize="@dimen/_11sdp"
            android:paddingLeft="@dimen/_10sdp"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/word_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".7"
            android:text="@string/lessonword"
            android:padding="@dimen/_3sdp"
            android:textColor="@color/scheduleheadertextcolor"
            android:textSize="@dimen/_11sdp"
            android:textAlignment="center"/>

    </LinearLayout>
</LinearLayout>