<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/llHeader"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_5sdp"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/_1sdp"
        android:visibility="visible"
        android:weightSum="5">

        <TextView
            android:id="@+id/srno_txt"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="wrap_content"
            android:padding="@dimen/_3sdp"
            android:text="@string/date"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_9sdp" />


        <TextView
            android:id="@+id/test_name_txt"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:gravity="center"
            android:padding="@dimen/_3sdp"
            android:text="@string/testname"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_9sdp"/>

        <TextView
            android:id="@+id/grade_txt"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/_3sdp"
            android:text="@string/grade"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_9sdp" />

        <TextView
            android:id="@+id/subject_txt"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="wrap_content"
            android:layout_weight="1.64"
            android:gravity="center"
            android:padding="@dimen/_3sdp"
            android:text="@string/subject"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_9sdp" />

        <ImageView
            android:id="@+id/edit_txt"
            android:layout_width="0dp"
            android:layout_height="@dimen/_25sdp"
            android:layout_gravity="left"
            android:layout_weight="0.80"
            android:padding="@dimen/_3sdp"
            android:textSize="@dimen/_9sdp"/>

    </LinearLayout>
</LinearLayout>