<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/llHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/_1sdp"
        android:visibility="visible"
        android:weightSum="3"
        android:background="@drawable/list_line">

        <TextView
            android:id="@+id/standard_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/standard"
            android:padding="@dimen/_5sdp"
            android:textColor="@color/scheduleheadertextcolor"
            android:textSize="@dimen/_11sdp"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/class_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/classes"
            android:padding="@dimen/_5sdp"
            android:textColor="@color/scheduleheadertextcolor"
            android:textSize="@dimen/_11sdp"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/subject_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/subject"
            android:padding="@dimen/_5sdp"
            android:textColor="@color/scheduleheadertextcolor"
            android:textSize="@dimen/_11sdp"
            android:layout_marginRight="4dp"
            android:textAlignment="center"/>

    </LinearLayout>
</LinearLayout>