<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shadow_box1"
            android:padding="@dimen/_5sdp"
            android:weightSum="5">

            <TextView
                android:id="@+id/Date_txt"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_25sdp"
                android:padding="@dimen/_3sdp"
                android:text="@string/plandate"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/_10sdp" />

            <TextView
                android:id="@+id/Standard_txt"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_25sdp"
                android:layout_weight="1.2"
                android:padding="@dimen/_3sdp"
                android:text="@string/standard"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/_10sdp" />

            <TextView
                android:id="@+id/Class_txt"
                android:layout_width="0dp"
                android:layout_height="@dimen/_25sdp"
                android:layout_weight="1.4"
                android:padding="@dimen/_3sdp"
                android:text="@string/classes"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/_10sdp" />

            <TextView
                android:id="@+id/Subject_txt"
                android:layout_width="0dp"
                android:layout_height="@dimen/_25sdp"
                android:layout_weight="2.1"
                android:padding="@dimen/_3sdp"
                android:text="@string/subject"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/_10sdp" />

            <ImageView
                android:id="@+id/arrow_txt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.51"
                android:textSize="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:textStyle="normal" />
        </LinearLayout>

    </LinearLayout>



</LinearLayout>